[package]
name = "lazyfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fuser = "0.14"
regex = "1.10.2"
serde = { version = "1.0", features=["derive"] }
toml = "0.5.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
